[gd_scene load_steps=4 format=2]

[ext_resource path="res://Interprete.gd" type="Script" id=1]
[ext_resource path="res://ejecutar.gd" type="Script" id=2]
[ext_resource path="res://gramatica.gd" type="Script" id=3]

[node name="UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextoCodigo" type="TextEdit" parent="."]
margin_left = 192.0
margin_top = 48.0
margin_right = 840.0
margin_bottom = 288.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextoSalida" type="TextEdit" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -320.0
margin_top = 320.0
margin_right = 328.0
margin_bottom = 544.0
grow_horizontal = 2
grow_vertical = 2

[node name="BotonEjecutar" type="Button" parent="."]
margin_left = 848.0
margin_top = 256.0
margin_right = 968.0
margin_bottom = 287.0
text = "Ejecutar"

[node name="Interprete" type="Node" parent="."]
script = ExtResource( 1 )

[node name="gramatica" type="Node" parent="Interprete"]
script = ExtResource( 3 )

[connection signal="pressed" from="BotonEjecutar" to="." method="_on_BotonEjecutar_pressed"]
